--- a/index.html
+++ b/index.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset='utf-8'>
+	<meta charset='utf-8'>
+	<title>Brian Stovall: Portfolio</title>
+	<script src='jquery-2.2.0.min.js' type='text/javascript'></script>
+	<script src='bootstrap.min.js' type='text/javascript'></script>
+	<link href='bootstrap.min.css' rel='stylesheet'>
+	<link href='portfolio.css' rel='stylesheet'>
 </head>
 <body>
-	<h1>
-		Hello, jello!
-	</h1>
+	<nav class='navbar navbar-inverse navbar-fixed-top'>
+			<div class='navbar-header'>
+				<button type='button' class='navbar-toggle collapsed' data-toggle='collapse'
+					data-target='#navbar' aria-expanded='false'>
+					<span class='icon-bar'></span>
+					<span class='icon-bar'></span>
+					<span class='icon-bar'></span>
+				</button>
+				<div class='navbar-brand'>Brian Stovall</div>
+			</div>
+			 
+			<div id='navbar' class='navbar-collapse collapse'>
+				<ul class='nav navbar-nav'>
+					<li><a href='#'>Home</a></li>
+					<li><a href='#'>About</a></li>
+					<li><a href='#'>Portfolio</a></li>
+					<li><a href='#'>Contact</a></li>
+				</ul>
+			</div>
+	</nav>
 </body>
 </html>
