--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			</div>
 			 
 			<div id='navbar' class='navbar-collapse collapse'>
-				<ul class='nav navbar-nav'>
+				<ul class='nav navbar-nav navbar-right'>
 					<li><a href='#'>Home</a></li>
 					<li><a href='#'>About</a></li>
 					<li><a href='#'>Portfolio</a></li>
