added ranier background and css to cover sections with backgrounds intelligently

--- a/index.html
+++ b/index.html
@@ -29,5 +29,18 @@
 				</ul>
 			</div>
 	</nav>
+
+	<div id='home' class='section'>
+		<div class='container'></div>
+	</div>
+	<div id='about' class='section'>
+		<div class='container'></div>
+	</div>
+	<div id='portfolio' class='section'>
+		<div class='container'></div>
+	</div>
+	<div id='contact' class='section'>
+		<div class='container'></div>
+	</div>
 </body>
 </html>
