added backgrounds and finished the "about" section;

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 			 
 			<div id='navbar' class='navbar-collapse collapse'>
 				<ul class='nav navbar-nav navbar-right'>
-					<li><a href='#'>Home</a></li>
 					<li><a href='#'>About</a></li>
 					<li><a href='#'>Portfolio</a></li>
 					<li><a href='#'>Contact</a></li>
@@ -30,12 +29,22 @@
 			</div>
 	</nav>
 
-	<div id='home' class='section'>
-		<div class='container'></div>
-	</div>
 	<div id='about' class='section'>
-		<div class='container'></div>
+		<div id='name' class='container'>
+			<div class='row'>
+				<img id='myPic' src='assets/me.png'></img>
+			</div>
+			<!--
+			<div class='row'>
+				<h1 class='xs-col-6'><a href='http://github.com/brian-stovall/'>Brian Stovall</a></h1>
+			</div>
+			-->
+			<div class='row'>
+			 <p class='xs-col-6'><br>I love solving problems with code. I am working to hone my skills with the goal of finding a position as junior developer. <br><br>Skills: HTML, CSS, Javascript, Lua, Python, C, git/GitHub, Vim, Bootstrap, Calculus, Linear Algebra, ODEs. <br><br>I am currently <a href='http://www.freecodecamp.com'>learning</a> the MEAN stack.</p>
+			</div>
+		</div>
 	</div>
+
 	<div id='portfolio' class='section'>
 		<div class='container'></div>
 	</div>
