--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link href='portfolio.css' rel='stylesheet'>
 </head>
 <body>
+	<!-- begin navbar -->
 	<nav class='navbar navbar-inverse navbar-fixed-top'>
 			<div class='navbar-header'>
 				<button type='button' class='navbar-toggle collapsed' data-toggle='collapse'
@@ -22,34 +23,47 @@
 			 
 			<div id='navbar' class='navbar-collapse collapse'>
 				<ul class='nav navbar-nav navbar-right'>
-					<li><a href='#'>About</a></li>
-					<li><a href='#'>Portfolio</a></li>
-					<li><a href='#'>Contact</a></li>
+					<li><a href='#about'>About</a></li>
+					<li><a href='#portfolio'>Portfolio</a></li>
+					<li><a href='#contact'>Contact</a></li>
 				</ul>
 			</div>
 	</nav>
+	<!-- end navbar -->
 
-	<div id='about' class='section'>
-		<div id='name' class='container'>
+	<!-- begin about section  -->
+	<div id='about' class='section container'>
+		<div id='name' >
 			<div class='row'>
 				<img id='myPic' src='assets/me.png'></img>
 			</div>
-			<!--
 			<div class='row'>
-				<h1 class='xs-col-6'><a href='http://github.com/brian-stovall/'>Brian Stovall</a></h1>
-			</div>
-			-->
-			<div class='row'>
-			 <p class='xs-col-6'><br>I love solving problems with code. I am working to hone my skills with the goal of finding a position as junior developer. <br><br>Skills: HTML, CSS, Javascript, Lua, Python, C, git/GitHub, Vim, Bootstrap, Calculus, Linear Algebra, ODEs. <br><br>I am currently <a href='http://www.freecodecamp.com'>learning</a> the MEAN stack.</p>
+			  <p class='xs-col-6'>
+			 		<br>Hello, my name is Brian, and I love solving problems with code. I am working to 
+					hone my skills with the goal of finding a position as junior developer. <br><br>
+					My best skill is self-teaching - I am curious, an avid reader, good at breaking 
+					problems into small chunks and careful, scientific observation.<br><br>Other
+					skills: HTML, CSS, Javascript, Lua, Python, C, git/GitHub, Vim, Bootstrap, Calculus,
+					Linear Algebra, ODEs. <br><br>I am currently <a href='http://www.freecodecamp.com'>learning
+					</a> the MEAN stack. <br><br>
+				 <br><br><br><br>
+				</p>
 			</div>
 		</div>
 	</div>
+	<!-- end about section  -->
 
+	<!-- begin portfolio section  -->
 	<div id='portfolio' class='section'>
 		<div class='container'></div>
 	</div>
+	<!-- end portfolio section  -->
+
+	<!-- begin contact section  -->
 	<div id='contact' class='section'>
 		<div class='container'></div>
 	</div>
+	<!-- end contact section -->
+
 </body>
 </html>
