--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset='utf-8'>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Brian Stovall: Portfolio</title>
 	<script src='jquery-2.2.0.min.js' type='text/javascript'></script>
 	<script src='bootstrap.min.js' type='text/javascript'></script>
@@ -44,7 +45,8 @@
 					My best skill is self-teaching - I am curious, an avid reader, good at breaking 
 					problems into small chunks and careful, scientific observation.<br><br>Other
 					skills: HTML, CSS, Javascript, Lua, Python, C, git/GitHub, Vim, Bootstrap, Calculus,
-					Linear Algebra, ODEs. <br><br>I am currently <a href='http://www.freecodecamp.com'>learning
+					Linear Algebra, ODEs. <br><br>I am currently 
+					<a href='http://www.freecodecamp.com/hoppenmaus'>learning
 					</a> the MEAN stack. <br><br>
 				 <br><br><br><br>
 				</p>
@@ -54,14 +56,27 @@
 	<!-- end about section  -->
 
 	<!-- begin portfolio section  -->
-	<div id='portfolio' class='section'>
-		<div class='container'></div>
+	<div id='portfolio' class='section container'>
 	</div>
 	<!-- end portfolio section  -->
 
 	<!-- begin contact section  -->
-	<div id='contact' class='section'>
-		<div class='container'></div>
+	<div id='contact' class='section container'>
+	  <div id='contactRow' class='row'>
+				<p>Contact me via:</p> 
+				<div class='col-xs-6 col-xs-offset-3 btn btn-md btn-default'>
+					<a href='http://github.com/brian-stovall/'>GitHub</a>
+				</div>
+				<div class='col-xs-6 col-xs-offset-3 btn btn-md btn-default'>
+					<a href='mailto:hoppenmaus@gmail.com'>Email</a>
+				</div>
+				<div class='col-xs-6 col-xs-offset-3 btn btn-md btn-default'>
+					<a href='http://www.linkedin.com/in/bristov'>LinkedIn</a>
+				</div>
+				<div class='col-xs-6 col-xs-offset-3 btn btn-md btn-default'>
+					<a href='http://freecodecamp.com/hoppenmaus/'>FreeCodeCamp</a>
+				</div>
+		</div>
 	</div>
 	<!-- end contact section -->
 
