styled and laid out contact links

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<script src='bootstrap.min.js' type='text/javascript'></script>
 	<link href='bootstrap.min.css' rel='stylesheet'>
 	<link href='portfolio.css' rel='stylesheet'>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
 <body>
 	<!-- begin navbar -->
@@ -64,18 +65,22 @@
 	<div id='contact' class='section container'>
 	  <div id='contactRow' class='row'>
 				<p>Contact me via:</p> 
-				<div class='col-xs-6 col-xs-offset-3 btn btn-md btn-default'>
-					<a href='http://github.com/brian-stovall/'>GitHub</a>
-				</div>
-				<div class='col-xs-6 col-xs-offset-3 btn btn-md btn-default'>
-					<a href='mailto:hoppenmaus@gmail.com'>Email</a>
-				</div>
-				<div class='col-xs-6 col-xs-offset-3 btn btn-md btn-default'>
-					<a href='http://www.linkedin.com/in/bristov'>LinkedIn</a>
-				</div>
-				<div class='col-xs-6 col-xs-offset-3 btn btn-md btn-default'>
-					<a href='http://freecodecamp.com/hoppenmaus/'>FreeCodeCamp</a>
-				</div>
+				<a href='http://github.com/brian-stovall/'>
+					<div class='col-xs-6 col-xs-offset-3 btn btn-md btn-primary'>
+					<i class='fa fa-github'></i> GitHub</div>
+				</a>
+				<a href='mailto:hoppenmaus@gmail.com'>
+					<div class='col-xs-6 col-xs-offset-3 btn btn-md btn-primary'>
+					<i class='fa fa-send-o'></i> Email</div>
+				</a>
+				<a href='http://www.linkedin.com/in/bristov'>
+					<div class='col-xs-6 col-xs-offset-3 btn btn-md btn-primary'>
+					<i class='fa fa-linkedin-square'></i> LinkedIn</div>
+				</a>
+				<a href='http://freecodecamp.com/hoppenmaus/'>
+					<div class='col-xs-6 col-xs-offset-3 btn btn-md btn-primary'>
+					<i class='fa fa-fire'></i> FreeCodeCamp</div>
+				</a>
 		</div>
 	</div>
 	<!-- end contact section -->
