started adding projects to portfolio section

--- a/index.html
+++ b/index.html
@@ -58,6 +58,34 @@
 
 	<!-- begin portfolio section  -->
 	<div id='portfolio' class='section container'>
+		<div class='row'><h1>Selected Work</h1></div>
+		<div class='row'>
+			<div class='col-xs-6 col-xs-offset-3 project'>
+				<a href='http://brian-stovall.github.io/maze_explorer/' class='thumbnail'>
+					<img src='assets/mazeExplore.png'>
+				</a>
+					<div class='caption'>
+						<h3>Maze Explorer</h3>
+						<p>I have always loved mazes. I was reading about maze generating algorithms
+							 one day and started experimenting, and this is the result (so far). The program
+							 builds a maze and then lets the user explore in different modes, based
+							 on what gear they bring along.</p>
+				  </div>
+			</div>
+		</div>
+		<div class='row'>
+			<div class='col-xs-6 col-xs-offset-3 project'>
+				<a href='http://brian-stovall.github.io/melanzana/' class='thumbnail'>
+					<img src='assets/melanzana.png'>
+				</a>
+					<div class='caption'>
+						<h3>Melanaza Timer</h3>
+						<p>I built a pomodoro clock web app, but I like eggplants, so I used an eggplant rather
+							 than a tomato for the graphic. It uses animation frames to draw the eggplant smoothly
+							 over any period of time.</p>
+					</div>
+					</div>
+		</div>
 	</div>
 	<!-- end portfolio section  -->
 
