--- a/index.html
+++ b/index.html
@@ -79,15 +79,14 @@
 
 		<div class='row'>
 			<div class='col-xs-8 col-xs-offset-2 project'>
-				<a href='http://brian-stovall.github.io/melanzana/' class='thumbnail'>
-					<img src='assets/melanzana.png'>
+				<a href='http://brian-stovall.github.io/weather/' class='thumbnail'>
+					<img src='assets/weather.png'>
 				</a>
 					<div class='caption'>
-						<h3>Melanaza Timer</h3>
-						<p>I built a pomodoro clock web app, but I like eggplants, so I used an eggplant rather
-							 than a tomato for the graphic. It animates via a div element with a higher
-							 z-index "growing" and "shrinking" over a static eggplant image instead of a canvas 
-							 or DOM sprites.</p>
+						<h3>What's Up? Weather</h3>
+						<p>This program uses HTML5 geolocation and the Open Weather API to display
+							 the user's local weather. It selects a background image based on
+							 the kind of weather the user is experiencing.</p>
 					</div>
 			</div>
 		</div>
