removed melanzana assets. updated image and description for simon. reordered portfolio projects to put the prettiest at the top.

--- a/index.html
+++ b/index.html
@@ -63,6 +63,34 @@
 
 		<div class='row'>
 			<div class='col-xs-8 col-xs-offset-2 project'>
+				<a href='http://brian-stovall.github.io/weather/' class='thumbnail'>
+					<img src='assets/weather.png'>
+				</a>
+					<div class='caption'>
+						<h3>What's Up? Weather</h3>
+						<p>This program uses HTML5 geolocation and the Open Weather API to display
+							 the user's local weather. It selects a background image based on
+							 the kind of weather the user is experiencing.</p>
+					</div>
+			</div>
+		</div>
+
+		<div class='row'>
+			<div class='col-xs-8 col-xs-offset-2 project'>
+				<a href='http://brian-stovall.github.io/web_simon/' class='thumbnail'>
+					<img src='assets/simon.png'>
+				</a>
+					<div class='caption'>
+						<h3>Simon</h3>
+						<p>A webpage rendition of the 'Simon' game, with a lot of animation
+						and user interaction. This is one of my most 'stateful' webpages -
+					  great practice for keeping things clean via function composition.</p>
+				  </div>
+			</div>
+		</div>
+
+		<div class='row'>
+			<div class='col-xs-8 col-xs-offset-2 project'>
 				<a href='http://brian-stovall.github.io/maze_explorer/' class='thumbnail'>
 					<img src='assets/mazeExplore.png'>
 				</a>
@@ -74,20 +102,6 @@
 							 on what gear they decide to bring along. Use vim or arrow keys to 
 							 explore.</p>
 				  </div>
-			</div>
-		</div>
-
-		<div class='row'>
-			<div class='col-xs-8 col-xs-offset-2 project'>
-				<a href='http://brian-stovall.github.io/weather/' class='thumbnail'>
-					<img src='assets/weather.png'>
-				</a>
-					<div class='caption'>
-						<h3>What's Up? Weather</h3>
-						<p>This program uses HTML5 geolocation and the Open Weather API to display
-							 the user's local weather. It selects a background image based on
-							 the kind of weather the user is experiencing.</p>
-					</div>
 			</div>
 		</div>
 
@@ -107,19 +121,6 @@
 			</div>
 		</div>
 
-		<div class='row'>
-			<div class='col-xs-8 col-xs-offset-2 project'>
-				<a href='http://brian-stovall.github.io/web_simon/' class='thumbnail'>
-					<img src='assets/simon.png'>
-				</a>
-					<div class='caption'>
-						<h3>Simon</h3>
-						<p>A webpage rendition of the 'Simon' game. This was early practice in shaping divs, 
-							 controlling state in a webpage, and handling events, sound, and animation in the
-							 browser.</p>
-				  </div>
-			</div>
-		</div>
 	</div>
 	<!-- end portfolio section  -->
 
