updated email address

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 					<div class='col-xs-6 col-xs-offset-3 btn btn-md btn-primary'>
 					<i class='fa fa-github'></i> GitHub</div>
 				</a>
-				<a href='mailto:hoppenmaus@gmail.com'>
+				<a href='mailto:brian.m.stovall@gmail.com'>
 					<div class='col-xs-6 col-xs-offset-3 btn btn-md btn-primary'>
 					<i class='fa fa-send-o'></i> Email</div>
 				</a>
