--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					problems into small chunks and careful, scientific observation.<br><br>Other
 					skills: HTML, CSS, Javascript, Lua, Python, C, git/GitHub, Vim, Bootstrap, Calculus,
 					Linear Algebra, ODEs. <br><br>I am currently 
-					<a href='http://www.freecodecamp.com/hoppenmaus'>learning
+					<a href='http://www.freecodecamp.com/brian-stovall'>learning
 					</a> the MEAN stack. <br><br>
 				 <br><br><br><br>
 				</p>
@@ -140,7 +140,7 @@
 					<div class='col-xs-6 col-xs-offset-3 btn btn-md btn-primary'>
 					<i class='fa fa-linkedin-square'></i> LinkedIn</div>
 				</a>
-				<a href='http://freecodecamp.com/hoppenmaus/'>
+				<a href='http://freecodecamp.com/brian-stovall'>
 					<div class='col-xs-6 col-xs-offset-3 btn btn-md btn-primary'>
 					<i class='fa fa-fire'></i> FreeCodeCamp</div>
 				</a>
