replaced fruit-up with surf twitch

--- a/index.html
+++ b/index.html
@@ -108,15 +108,13 @@
 		<div class='row'>
 			<div class='col-xs-8 col-xs-offset-2 project'>
 				<a href='http://brian-stovall.github.io/fruit-up/' class='thumbnail'>
-					<img src='assets/fruitUp.png'>
+					<img src='assets/surf-twitch.png'>
 				</a>
 					<div class='caption'>
-						<h3>Fruit-Up</h3>
-						<p>When I first started to make webpages, I was suprised how much processing power
-						   it seemed to take to make simple animations compared to native applicatons.
-							 I read about using DOM elements as sprites instead of canvas or libraries like 
-							 Phaser, and I made this silly "screensaver" webpage to stress-test the idea a 
-							 bit and try out DOM spritesheets.</p>
+						<h3>Twitch.tv Channel Surfer</h3>
+						<p>A frontend for the popular Twitch.tv platform. Users can search for their 
+						   favorite channels, which are loaded asynchronously via API calls. An image 
+							 of the current stream is loaded and the page can be sorted by activity.</p>
 				  </div>
 			</div>
 		</div>
