added recent topics of study

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 					skills: HTML, CSS, Javascript, Lua, Python, C, git/GitHub, Vim, Bootstrap, Calculus,
 					Linear Algebra, ODEs. <br><br>I am currently 
 					<a href='http://www.freecodecamp.com/brian-stovall'>learning
-					</a> the MEAN stack. <br><br>
+					</a> the MEAN stack, Clojure/ClojureScript, 
+					build systems (npm, yeoman, and gulp) and emacs.<br><br>
 				 <br><br><br><br>
 				</p>
 			</div>
@@ -114,7 +115,7 @@
 						<h3>Twitch.tv Channel Surfer</h3>
 						<p>A frontend for the popular Twitch.tv platform. Users can search for their 
 						   favorite channels, which are loaded asynchronously via API calls. An image 
-							 of the current stream is loaded and the page can be sorted by activity.</p>
+							 of the current stream is loaded and results can be sorted by activity.</p>
 				  </div>
 			</div>
 		</div>
