changed MEAN stack to MERN, since React is what I study now.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					skills: HTML, CSS, Javascript, Lua, Python, C, git/GitHub, Vim, Bootstrap, Calculus,
 					Linear Algebra, ODEs. <br><br>I am currently 
 					<a href='http://www.freecodecamp.com/brian-stovall'>learning
-					</a> the MEAN stack, Clojure/ClojureScript, 
+					</a> the MERN stack, Clojure/ClojureScript, 
 					build systems (npm, yeoman, and gulp) and emacs.<br><br>
 				 <br><br><br><br>
 				</p>
