--- a/index.html
+++ b/index.html
@@ -64,6 +64,23 @@
 
 		<div class='row'>
 			<div class='col-xs-8 col-xs-offset-2 project'>
+				<a href='http://once-upon-a-tornado.herokuapp.com/' class='thumbnail'>
+					<img src='assets/tornado.png'>
+				</a>
+					<div class='caption'>
+						<h3>Once Upon a Tornado</h3>
+						<p>This program takes multiple large text inputs (works of classical fiction, 
+						   in this demo) and processes them via Markov chaining to generate
+							 literary mashups on on the spot. Markov chains are a predictive analysis tool used
+							 by several large companies (Google's PageRank algorithm relies on them, for example.) 
+							 This implementation is written in Clojure, from algorithm to server, and uses
+							 Ring, Compojure, and Hiccup.</p>
+					</div>
+			</div>
+		</div>
+
+		<div class='row'>
+			<div class='col-xs-8 col-xs-offset-2 project'>
 				<a href='http://brian-stovall.github.io/weather/' class='thumbnail'>
 					<img src='assets/weather.png'>
 				</a>
