Updated my *currently studying* section

--- a/index.html
+++ b/index.html
@@ -46,11 +46,9 @@
 					native applications. <br><br> My best skill is self-teaching: I 
 					am curious, an avid reader, good at breaking 
 					problems into small chunks and careful, scientific observation.<br><br>Other
-					skills: HTML, CSS, Javascript, Lua, Python, C, git/GitHub, Vim, Bootstrap, Calculus,
-					Linear Algebra, ODEs. <br><br>I am currently 
-					<a href='http://www.freecodecamp.com/brian-stovall'>learning
-					</a> the MERN stack, Clojure/ClojureScript, 
-					build systems (npm, yeoman, and gulp) and emacs.<br><br>
+					skills: HTML, CSS, Javascript, Lua, Python, C, git/GitHub, Vim, Emacs, Bootstrap, 	                  Linux, Calculus, Linear Algebra, ODEs. <br><br>I am currently 
+					studying functional programming via Clojure/ClojureScript, 
+					Scala, and Haskell.<br><br>
 				 <br><br><br><br>
 				</p>
 			</div>
