--- a/index.html
+++ b/index.html
@@ -41,13 +41,17 @@
 			</div>
 			<div class='row'>
 			  <p class='xs-col-6'>
-			 		<br>Hello, my name is Brian, and I love solving problems with code. I am working to 
-					hone my skills with the goal of finding a position as junior developer, for web or
-					native applications. <br><br> My best skill is self-teaching: I 
-					am curious, an avid reader, good at breaking 
-					problems into small chunks and careful, scientific observation.<br><br>Other
-					skills: HTML, CSS, Javascript, Lua, Python, C, git/GitHub, Vim, Emacs, Bootstrap, 	                  Linux, Calculus, Linear Algebra, ODEs. <br><br>I am currently 
-					studying functional programming via Clojure/ClojureScript, 
+			 		<br>Hello, my name is Brian, and I love solving problems with code. I currently
+					work at DocSpot in Sunnyvale, California as a back-end developer. I work on a 
+					custom Java codebase with a focus on selecting, downloading, and indexing data from
+					the web. It's fascinating work that combines elements of NLP, probabilistic 
+					decision making, data sanitizing, building APIs, and writing services that support
+					concurrent operations on a massive SQL database by internal and customer-facing tools. 
+					<br><br> My best skill is self-teaching: I am curious, an avid reader, good at breaking 
+					problems into small chunks, and careful, scientific observation.<br><br>Other
+					skills: HTML, CSS, Javascript, Lua, Java, C, git/GitHub, Vim, Emacs, 
+					Linux, Calculus, Linear Algebra, ODEs. 
+					<br><br>I am currently studying functional programming via Clojure/ClojureScript, 
 					Scala, and Haskell.<br><br>
 				 <br><br><br><br>
 				</p>
