edited hobby text

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					problems into small chunks, and careful, scientific observation.<br><br>Other
 					skills: HTML, CSS, Javascript, Lua, Java, C, git/GitHub, Vim, Emacs, 
 					Linux, Calculus, Linear Algebra, ODEs. 
-					<br><br>I am currently studying functional programming via Clojure/ClojureScript, 
+					<br><br>In my spare time, I study functional programming via Clojure/ClojureScript, 
 					Scala, and Haskell.<br><br>
 				 <br><br><br><br>
 				</p>
